apps/microservices-demo/services/adservice/base/adservice-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
      - name: app
        image: adservice
        volumeMounts:
        - name: init
          mountPath: /toolbox
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "50Mi"
          requests:
            cpu: "100m"
            memory: "50Mi"
      serviceAccountName: adservice
      volumes:
      - name: init
        configMap:
          name: adservice-init
