apps/microservices-demo/services/adservice/base/adservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  selector:
    app: adservice
  ports:
  - name: http-8080
    port: 8080
    protocol: TCP
